@@ -70,6 +70,7 @@ static struct
 	{ EMUCMD_OPENROM,					SCAN_O | CMD_KEY_CTRL,	    },
 	{ EMUCMD_CLOSEROM,					SCAN_W | CMD_KEY_CTRL,		},
 	{ EMUCMD_MISC_UNDOREDOSAVESTATE,	SCAN_Z | CMD_KEY_CTRL,		},
+	{ EMUCMD_MISC_TOGGLEFULLSCREEN,		SCAN_ENTER | CMD_KEY_ALT,	},
 };
 
 #define NUM_DEFAULT_MAPPINGS		(sizeof(DefaultCommandMapping)/sizeof(DefaultCommandMapping[0]))
